--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,27 @@
   header { background:#f5f5f5; padding:15px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #ddd; }
   header h1 { margin:0; font-size:20px; }
   .nav-links { display:flex; gap:10px; }
-  .nav-btn { background:#000; color:#fff; padding:10px 18px; border-radius:6px; text-decoration:none; font-size:15px; border:none; cursor:pointer; transition:0.2s; }
-  .nav-btn:hover { background:#333; }
+  .nav-btn {
+  display: inline-flex;           /* same for <a> and <button> */
+  align-items: center;            /* vertically center text */
+  justify-content: center;        /* horizontally center text */
+  min-width: 100px;               /* optional: force same width */
+  background: #000;
+  color: #fff;
+  padding: 10px 18px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s;
+  box-sizing: border-box;         /* include padding in width */
+}
+
+.nav-btn:hover {
+  background: #333;
+}
+
   main { padding:20px; max-width:1000px; margin:auto; }
   section { margin-bottom:30px; padding:20px; border:1px solid #ddd; border-radius:8px; background:#fafafa; }
   section h2 { margin-top:0; font-size:18px; border-bottom:1px solid #ddd; padding-bottom:6px; }
