--- a/wizardmaker/wizardmaker.html
+++ b/wizardmaker/wizardmaker.html
@@ -99,5 +99,19 @@
   <script src="js/editor.js"></script>
   <script src="js/library.js"></script>
   <script src="js/theme.js"></script>
+<!-- Library Preview Modal -->
+<div id="libraryPreviewModal" class="modal-backdrop" style="display:none;">
+  <div class="modal">
+    <h2>Preview Library Item</h2>
+    <div id="libraryPreviewContent" style="max-height:300px;overflow:auto;background:#f9f9f9;padding:1rem;border-radius:0.5rem;">
+      <!-- Live preview will be injected here -->
+    </div>
+    <div class="actions" style="margin-top:1rem;">
+      <button id="cancelLibraryPreview">Cancel</button>
+      <button id="insertLibraryPreview">Insert</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
