--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
        class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
       Login
     </a>
+    <!-- Place this where you want the button on your index.html -->
+<a href="Sitegen_Hosting/hosting.html">
+  <button style="background-color: black; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
+    Visit Hosting
+  </button>
+</a>
+    
   </div>
 </div>
 
