--- a/Sitegen_Hosting/hosting.html
+++ b/Sitegen_Hosting/hosting.html
@@ -12,14 +12,14 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
       <h1 class="text-2xl font-bold text-black">Sitegen Hosting</h1>
       <nav class="space-x-6 hidden md:flex">
-        <a href="plans.html" class="hover:text-black">Plans</a>
-        <a href="features.html" class="hover:text-black">Features</a>
-        <a href="about.html" class="hover:text-black">About</a>
-        <a href="contact.html" class="hover:text-black">Contact</a>
+        <a href="../plans.html" class="hover:text-black">Plans</a>
+        <a href="../features.html" class="hover:text-black">Features</a>
+        <a href="../about.html" class="hover:text-black">About</a>
+        <a href="../contact.html" class="hover:text-black">Contact</a>
       </nav>
       <div class="space-x-3">
-        <a href="login.html" class="px-4 py-2 text-sm border border-black text-black rounded-lg hover:bg-gray-100">Login</a>
-        <a href="signup.html" class="px-4 py-2 text-sm bg-black text-white rounded-lg hover:bg-gray-800">Get Started</a>
+        <a href="../login.html" class="px-4 py-2 text-sm border border-black text-black rounded-lg hover:bg-gray-100">Login</a>
+        <a href="../signup.html" class="px-4 py-2 text-sm bg-black text-white rounded-lg hover:bg-gray-800">Get Started</a>
       </div>
     </div>
   </header>
@@ -103,10 +103,10 @@
       <div>
         <h5 class="text-lg font-semibold text-white mb-2">Quick Links</h5>
         <ul class="space-y-1 text-sm">
-          <li><a href="plans.html" class="hover:text-white">Plans</a></li>
-          <li><a href="features.html" class="hover:text-white">Features</a></li>
-          <li><a href="about.html" class="hover:text-white">About Us</a></li>
-          <li><a href="contact.html" class="hover:text-white">Contact</a></li>
+          <li><a href="../plans.html" class="hover:text-white">Plans</a></li>
+          <li><a href="../features.html" class="hover:text-white">Features</a></li>
+          <li><a href="../about.html" class="hover:text-white">About Us</a></li>
+          <li><a href="../contact.html" class="hover:text-white">Contact</a></li>
         </ul>
       </div>
       <div>
