--- a/Sitegen_Hosting/hosting.html
+++ b/Sitegen_Hosting/hosting.html
@@ -13,7 +13,7 @@
       <h1 class="text-2xl font-bold text-black">Sitegen Hosting</h1>
       <nav class="space-x-6 hidden md:flex">
         <a href="../plans.html" class="hover:text-black">Plans</a>
-        <a href="../features.html" class="hover:text-black">Features</a>
+        <a href="features.html" class="hover:text-black">Features</a>
         <a href="../about.html" class="hover:text-black">About</a>
         <a href="../contact.html" class="hover:text-black">Contact</a>
       </nav>
@@ -104,7 +104,7 @@
         <h5 class="text-lg font-semibold text-white mb-2">Quick Links</h5>
         <ul class="space-y-1 text-sm">
           <li><a href="../plans.html" class="hover:text-white">Plans</a></li>
-          <li><a href="../features.html" class="hover:text-white">Features</a></li>
+          <li><a href="features.html" class="hover:text-white">Features</a></li>
           <li><a href="../about.html" class="hover:text-white">About Us</a></li>
           <li><a href="../contact.html" class="hover:text-white">Contact</a></li>
         </ul>
