--- a/login.html
+++ b/login.html
@@ -4,96 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | Sitegen</title>
+  <link rel="stylesheet" href="styles.css" />
   <style>
-    /* =======================
-       GLOBAL RESET + BASE
-       ======================= */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f9f9f9;
-      color: #111;
-      line-height: 1.5;
-    }
-
-    /* =======================
-       HEADER
-       ======================= */
-    .site-header {
-      width: 100%;
-      background: #fff;
-      border-bottom: 1px solid #e5e5e5;
-    }
-
-    .header-container {
-      width: 100%;
-      padding: 0.75rem 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .site-title {
-      font-size: 1.25rem;
-      font-weight: 700;
-      color: #111;
-    }
-
-    /* =======================
-       NAVIGATION
-       ======================= */
-    .nav-links {
-      display: flex;
-      gap: 0.75rem;
-      align-items: center;
-    }
-
-    .nav-links a {
-      text-decoration: none;
-      background: #000;
-      color: #fff;
-      padding: 0.5rem 1rem;
-      border-radius: 0.5rem;
-      font-size: 0.95rem;
-      transition: all 0.2s ease-in-out;
-    }
-
-    .nav-links a:hover {
-      background: #333;
-      transform: translateY(-2px);
-    }
-
-    /* =======================
-       AUTH FORM
-       ======================= */
-    .section-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: calc(100vh - 70px);
-      padding: 2rem;
-    }
-
+    /* Override styles only for login page if needed */
     .auth-form-box {
-      background: #fff;
+      background: var(--card-bg, #fff);
       border-radius: 1rem;
       padding: 2rem;
       width: 100%;
       max-width: 400px;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.1);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.1);
       text-align: center;
+      animation: fadeIn 0.6s ease-in-out;
     }
 
     .auth-form-box h2 {
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
+      margin-bottom: 1.5rem;
+      font-size: 1.6rem;
       font-weight: 700;
-      color: #111;
+      color: var(--text, #111);
     }
 
     .auth-form-box input {
@@ -107,27 +36,29 @@
     }
 
     .auth-form-box input:focus {
-      border: 1px solid #000;
+      border: 1px solid var(--accent, #000);
       outline: none;
     }
 
     .btn {
       display: inline-block;
-      background: #000;
+      background: var(--accent, #000);
       color: #fff;
       padding: 0.75rem 1rem;
       border-radius: 0.5rem;
       text-align: center;
       cursor: pointer;
       transition: background 0.2s ease-in-out;
+      width: 100%;
+      margin-top: 0.5rem;
     }
 
     .btn:hover {
-      background: #333;
+      background: var(--accent-hover, #333);
     }
 
     .or-divider {
-      margin: 1rem 0;
+      margin: 1.5rem 0;
       position: relative;
       font-size: 0.85rem;
       color: #666;
@@ -152,25 +83,16 @@
     }
 
     .auth-links a {
-      color: #000;
+      color: var(--accent, #000);
       text-decoration: underline;
+      transition: color 0.2s ease-in-out;
     }
 
     .auth-links a:hover {
-      color: #333;
+      color: var(--accent-hover, #333);
     }
 
-    .toast-container {
-      position: fixed;
-      top: 1rem;
-      right: 1rem;
-      z-index: 9999;
-    }
-
-    .animate-fade-in {
-      animation: fadeIn 0.6s ease-in-out;
-    }
-
+    /* Animation */
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -181,7 +103,7 @@
   <!-- ✅ Header -->
   <header class="site-header">
     <div class="header-container">
-      <span class="site-title">Sitegen</span>
+      <a href="index.html" class="site-title">⚡ Sitegen</a>
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="library.html">Dashboard</a>
@@ -192,17 +114,17 @@
 
   <!-- ✅ Login Form -->
   <section class="section-container">
-    <div class="auth-form-box animate-fade-in">
-      <h2>Login</h2>
+    <div class="auth-form-box">
+      <h2>Welcome Back</h2>
       <form id="loginForm">
         <input type="email" id="loginEmail" placeholder="Email" required />
         <input type="password" id="loginPassword" placeholder="Password" required />
-        <button type="submit" class="btn w-full mt-2">Login</button>
+        <button type="submit" class="btn">Login</button>
       </form>
 
       <div class="or-divider">OR</div>
 
-      <div class="auth-links mt-4">
+      <div class="auth-links">
         <a href="#" id="forgotPasswordLink">Forgot Password?</a>
         <p>Don’t have an account? <a href="signup.html">Sign up</a></p>
       </div>
