--- a/login.html
+++ b/login.html
@@ -9,15 +9,15 @@
 <body class="bg-white text-black">
   <!-- Navbar -->
   <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
-      <h1 class="text-2xl font-bold text-black">Sitegen Hosting</h1>
+    <div class="max-w-7xl mx-auto flex justify-between items-center p-0">
+      <h1 class="text-2xl font-bold text-black pl-4">Sitegen Hosting</h1>
       <nav class="space-x-6 hidden md:flex">
         <a href="plans.html" class="hover:text-black">Plans</a>
         <a href="features.html" class="hover:text-black">Features</a>
         <a href="about.html" class="hover:text-black">About</a>
         <a href="contact.html" class="hover:text-black">Contact</a>
       </nav>
-      <div class="space-x-3">
+      <div class="space-x-3 pr-4">
         <a href="login.html" class="px-4 py-2 text-sm border border-black text-black rounded-lg hover:bg-gray-100">Login</a>
         <a href="signup.html" class="px-4 py-2 text-sm bg-black text-white rounded-lg hover:bg-gray-800">Get Started</a>
       </div>
@@ -25,7 +25,7 @@
   </header>
 
   <!-- Login Section -->
-  <section class="py-20 bg-gray-100 min-h-screen flex items-center justify-center">
+  <section class="py-20 bg-white min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-md">
       <h2 class="text-3xl font-bold text-center mb-6">Login</h2>
       <form id="loginForm" class="space-y-4">
