--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body class="bg-white text-black">
   <!-- Navbar -->
   <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto flex justify-between items-center p-0">
+    <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-4">
       <h1 class="text-2xl font-bold text-black pl-4">Sitegen Hosting</h1>
       <nav class="space-x-6 hidden md:flex">
         <a href="plans.html" class="hover:text-black">Plans</a>
