--- a/signup.html
+++ b/signup.html
@@ -5,252 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sitegen – Signup</title>
   <link rel="stylesheet" href="style.css" />
-
   <style>
-    :root {
-      --sg-black:#000;
-      --sg-white:#fff;
-      --sg-border:#e5e7eb;
-      --sg-text:#111827;
-      --sg-muted:#6b7280;
-    }
-
-    body {
-      margin:0;
-      color:var(--sg-text);
-      background:#f7f7f7;
-      font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-
-    /* Header */
-    .sg-header {
-      background:var(--sg-white);
-      border-bottom:1px solid var(--sg-border);
-      position:sticky;
-      top:0;
-      z-index:50;
-    }
-    .sg-header__inner {
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:12px 0; /* remove side padding */
-    }
-    .sg-brand {
-      margin:0;
-      font-size:1.25rem;
-      font-weight:700;
-      color:var(--sg-black);
-      padding-left:20px; /* align flush but keep breathing room */
-    }
-    .sg-nav {
-      display:flex;
-      gap:12px;
-      align-items:center;
-      padding-right:20px; /* flush right with slight room */
-    }
-    .sg-nav a {
-      display:inline-block;
-      padding:8px 14px;
-      background:var(--sg-black);
-      color:var(--sg-white);
-      text-decoration:none;
-      border-radius:10px;
-      box-shadow:0 4px 10px rgba(0,0,0,.08);
-      transition:opacity .2s ease, transform .15s ease;
-    }
-    .sg-nav a:hover {
-      opacity:.9;
-      transform:translateY(-2px);
-    }
-
-    /* Layout */
-    .sg-main {
-      min-height:calc(100vh - 64px);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:24px;
-    }
-    .sg-stack {
-      width:100%;
-      max-width:440px;
-      display:flex;
-      flex-direction:column;
-      gap:16px;
-    }
-
-    /* Card */
-    .sg-card {
-      background:var(--sg-white);
-      border:1px solid var(--sg-border);
-      border-radius:16px;
-      padding:28px;
-      box-shadow:0 10px 24px rgba(0,0,0,.06);
-      transition:transform .18s ease, box-shadow .18s ease;
-    }
-    .sg-card:hover {
-      transform:translateY(-2px);
-      box-shadow:0 18px 40px rgba(0,0,0,.12);
-    }
-
-    /* Typography */
-    .sg-title {
-      margin:0 0 18px;
-      font-size:1.75rem;
-      font-weight:800;
-      color:var(--sg-black);
-      text-align:center;
-    }
-    .sg-subtitle {
-      margin:0 0 10px;
-      font-size:1.05rem;
-      font-weight:700;
-      color:var(--sg-black);
-    }
-
-    /* Form */
-    .sg-field { width:100%; margin-bottom:12px; }
-    .sg-input {
-      width:100%;
-      padding:12px 14px;
-      border:1px solid #d1d5db;
-      border-radius:10px;
-      outline:none;
-      font-size:0.95rem;
-      transition:border-color .2s, box-shadow .2s;
-    }
-    .sg-input::placeholder {
-      color:#9ca3af;
-    }
-    .sg-input:focus {
-      border-color:var(--sg-black);
-      box-shadow:0 0 0 3px rgba(0,0,0,.06);
-    }
-
-    .sg-btn {
-      width:100%;
-      padding:12px 16px;
-      border:none;
-      border-radius:10px;
-      font-weight:600;
-      cursor:pointer;
-      transition:opacity .2s ease, transform .15s ease;
-    }
-    .sg-btn--black {
-      background:var(--sg-black);
-      color:var(--sg-white);
-    }
-    .sg-btn--black:hover {
-      opacity:.9;
-      transform:translateY(-1px);
-    }
-    .sg-btn--muted {
-      background:#e5e7eb;
-      color:#111827;
-    }
-    .sg-btn--muted[disabled] {
-      opacity:.6;
-      cursor:not-allowed;
-    }
-    .sg-btn--ghost {
-      background:transparent;
-      color:#374151;
-      border:1px solid #d1d5db;
-    }
-    .sg-btn--ghost:hover {
-      background:#f3f4f6;
-    }
-
-    /* Divider */
-    .sg-divider {
-      display:flex;
-      align-items:center;
-      gap:10px;
-      margin:16px 0;
-      color:#9ca3af;
-      font-size:.85rem;
-    }
-    .sg-divider > span {
-      flex:1;
-      height:1px;
-      background:var(--sg-border);
-    }
-
-    /* Toast container */
-    #toastContainer {
-      position:fixed;
-      top:16px;
-      right:16px;
-      display:flex;
-      flex-direction:column;
-      gap:8px;
-      z-index:100;
-    }
+    body { margin:0; font-family:ui-sans-serif,system-ui; background:#f7f7f7; color:#111827; }
+    header { background:#fff; border-bottom:1px solid #e5e7eb; position:sticky; top:0; z-index:50; }
+    .header-inner { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:16px 24px; }
+    .brand { font-weight:700; font-size:1.5rem; }
+    nav a { margin-left:16px; text-decoration:none; color:#111827; font-weight:500; }
+    .btn { padding:10px 16px; border-radius:8px; font-weight:600; cursor:pointer; border:none; }
+    .btn-black { background:#000; color:#fff; }
+    .btn-ghost { background:transparent; border:1px solid #d1d5db; color:#111827; }
+    main { display:flex; justify-content:center; align-items:center; min-height:calc(100vh - 72px); padding:24px; }
+    .card { background:#fff; border-radius:16px; padding:32px; max-width:400px; width:100%; box-shadow:0 10px 24px rgba(0,0,0,.06); }
+    .title { font-size:1.75rem; font-weight:800; text-align:center; margin-bottom:16px; }
+    .field { margin-bottom:12px; }
+    input { width:100%; padding:12px; border-radius:10px; border:1px solid #d1d5db; font-size:1rem; outline:none; }
+    input:focus { border-color:#000; box-shadow:0 0 0 3px rgba(0,0,0,.06); }
+    .divider { display:flex; align-items:center; gap:10px; margin:16px 0; color:#9ca3af; font-size:.85rem; }
+    .divider span { flex:1; height:1px; background:#e5e7eb; }
+    #toastContainer { position:fixed; top:16px; right:16px; display:flex; flex-direction:column; gap:8px; z-index:100; }
   </style>
-
-<body class="bg-white text-black">
-  <!-- Navbar -->
-  <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-4">
-      <h1 class="text-2xl font-bold text-black pl-4">Sitegen Hosting</h1>
-      <nav class="space-x-6 hidden md:flex">
-        <a href="plans.html" class="hover:text-black">Plans</a>
-        <a href="features.html" class="hover:text-black">Features</a>
-        <a href="about.html" class="hover:text-black">About</a>
-        <a href="contact.html" class="hover:text-black">Contact</a>
+</head>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="header-inner">
+      <div class="brand">Sitegen Hosting</div>
+      <nav>
+        <a href="plans.html">Plans</a>
+        <a href="features.html">Features</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
       </nav>
-      <div class="space-x-3 pr-4">
-        <a href="login.html" class="px-4 py-2 text-sm border border-black text-black rounded-lg hover:bg-gray-100">Login</a>
-        <a href="signup.html" class="px-4 py-2 text-sm bg-black text-white rounded-lg hover:bg-gray-800">Get Started</a>
+      <div>
+        <a href="login.html" class="btn btn-ghost">Login</a>
+        <a href="signup.html" class="btn btn-black">Get Started</a>
       </div>
     </div>
   </header>
-  <!-- Main -->
-  <main class="sg-main">
-    <div class="sg-stack">
-      <!-- Signup Card -->
-      <section class="sg-card">
-        <h2 class="sg-title">Create Your Account</h2>
 
-        <form id="signupForm2" novalidate>
-          <div class="sg-field">
-            <input type="text" id="name" class="sg-input" placeholder="Full Name" required />
-          </div>
-          <div class="sg-field">
-            <input type="email" id="email" class="sg-input" placeholder="Email" required />
-          </div>
-          <div class="sg-field">
-            <input type="password" id="password" class="sg-input" placeholder="Password" required />
-          </div>
+  <!-- Signup Card -->
+  <main>
+    <section class="card">
+      <h2 class="title">Create Your Account</h2>
 
-          <button type="submit" class="sg-btn sg-btn--black">Sign Up</button>
-          <button type="button" id="resendVerificationBtn" class="sg-btn sg-btn--muted" disabled>
-            Resend Verification
-          </button>
-          <button type="button" id="goToLoginBtn" class="sg-btn sg-btn--ghost">
-            Already have an account? Login
-          </button>
-        </form>
+      <form id="signupForm2" novalidate>
+        <div class="field"><input type="text" id="name" placeholder="Full Name" required /></div>
+        <div class="field"><input type="email" id="email" placeholder="Email" required /></div>
+        <div class="field"><input type="password" id="password" placeholder="Password" required /></div>
 
-        <div class="sg-divider">
-          <span></span> OR <span></span>
-        </div>
+        <button type="submit" class="btn btn-black">Sign Up</button>
+        <button type="button" id="resendVerificationBtn" class="btn btn-ghost" disabled>Resend Verification</button>
+        <button type="button" id="goToLoginBtn" class="btn btn-ghost">Already have an account? Login</button>
+      </form>
 
-        <button type="button" id="googleSignupBtn" class="sg-btn sg-btn--ghost" style="display:flex; align-items:center; justify-content:center; gap:8px;">
-          <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" width="18" height="18"/>
-          Continue with Google
-        </button>
-      </section>
+      <div class="divider"><span></span> OR <span></span></div>
 
-      
-    </div>
+      <button type="button" id="googleSignupBtn" class="btn btn-ghost" style="display:flex; align-items:center; justify-content:center; gap:8px;">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" width="18" height="18"/>
+        Continue with Google
+      </button>
+    </section>
   </main>
 
   <!-- Toasts -->
   <div id="toastContainer"></div>
 
-  <!-- Scripts -->
   <script type="module" src="firebase-login.js"></script>
   <script type="module" src="signup2.js"></script>
 </body>
