--- a/signup.html
+++ b/signup.html
@@ -7,22 +7,41 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body { margin:0; font-family:ui-sans-serif,system-ui; background:#f7f7f7; color:#111827; }
+    
+    /* Header */
     header { background:#fff; border-bottom:1px solid #e5e7eb; position:sticky; top:0; z-index:50; }
     .header-inner { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:16px 24px; }
     .brand { font-weight:700; font-size:1.5rem; }
     nav a { margin-left:16px; text-decoration:none; color:#111827; font-weight:500; }
-    .btn { padding:10px 16px; border-radius:8px; font-weight:600; cursor:pointer; border:none; }
+    .btn { padding:10px 16px; border-radius:8px; font-weight:600; cursor:pointer; border:none; transition:0.2s; }
     .btn-black { background:#000; color:#fff; }
+    .btn-black:hover { opacity:0.9; transform:translateY(-1px); }
     .btn-ghost { background:transparent; border:1px solid #d1d5db; color:#111827; }
+    .btn-ghost:hover { background:#f3f4f6; }
+
+    /* Main card */
     main { display:flex; justify-content:center; align-items:center; min-height:calc(100vh - 72px); padding:24px; }
-    .card { background:#fff; border-radius:16px; padding:32px; max-width:400px; width:100%; box-shadow:0 10px 24px rgba(0,0,0,.06); }
+    .card { background:#fff; border-radius:16px; padding:32px; max-width:400px; width:100%; box-shadow:0 10px 24px rgba(0,0,0,.06); transition:transform 0.2s; }
+    .card:hover { transform:translateY(-2px); box-shadow:0 18px 40px rgba(0,0,0,.12); }
+
+    /* Typography */
     .title { font-size:1.75rem; font-weight:800; text-align:center; margin-bottom:16px; }
     .field { margin-bottom:12px; }
     input { width:100%; padding:12px; border-radius:10px; border:1px solid #d1d5db; font-size:1rem; outline:none; }
     input:focus { border-color:#000; box-shadow:0 0 0 3px rgba(0,0,0,.06); }
+
+    /* Divider */
     .divider { display:flex; align-items:center; gap:10px; margin:16px 0; color:#9ca3af; font-size:.85rem; }
     .divider span { flex:1; height:1px; background:#e5e7eb; }
+
+    /* Footer */
+    footer { text-align:center; padding:16px 0; color:#6b7280; font-size:0.875rem; border-top:1px solid #e5e7eb; background:#fff; position:relative; bottom:0; }
+
+    /* Toast container */
     #toastContainer { position:fixed; top:16px; right:16px; display:flex; flex-direction:column; gap:8px; z-index:100; }
+
+    /* Google button */
+    #googleSignupBtn { display:flex; align-items:center; justify-content:center; gap:8px; width:100%; }
   </style>
 </head>
 <body>
@@ -60,16 +79,22 @@
 
       <div class="divider"><span></span> OR <span></span></div>
 
-      <button type="button" id="googleSignupBtn" class="btn btn-ghost" style="display:flex; align-items:center; justify-content:center; gap:8px;">
+      <button type="button" id="googleSignupBtn" class="btn btn-ghost">
         <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" width="18" height="18"/>
         Continue with Google
       </button>
     </section>
   </main>
 
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 Sitegen Hosting. All rights reserved.
+  </footer>
+
   <!-- Toasts -->
   <div id="toastContainer"></div>
 
+  <!-- Scripts -->
   <script type="module" src="firebase-login.js"></script>
   <script type="module" src="signup2.js"></script>
 </body>
