--- a/login.html
+++ b/login.html
@@ -31,13 +31,16 @@
     input:focus { border-color:#000; box-shadow:0 0 0 3px rgba(0,0,0,.06); }
 
     /* Links */
-    .auth-links { display:flex; justify-content:space-between; margin-bottom:12px; font-size:.875rem; }
+    .auth-links { display:flex; justify-content:flex-end; margin-bottom:16px; font-size:.875rem; }
     .auth-links a { color:#111827; text-decoration:none; font-weight:500; }
     .auth-links a:hover { text-decoration:underline; }
 
     /* Divider */
     .divider { display:flex; align-items:center; gap:10px; margin:16px 0; color:#9ca3af; font-size:.85rem; }
     .divider span { flex:1; height:1px; background:#e5e7eb; }
+
+    /* Centered buttons */
+    .btn-center { display:flex; justify-content:center; margin-top:12px; gap:8px; }
 
     /* Toast container */
     #toastContainer { position:fixed; top:16px; right:16px; display:flex; flex-direction:column; gap:8px; z-index:100; }
@@ -80,12 +83,20 @@
       <form id="loginForm" novalidate>
         <div class="field"><input type="email" id="loginEmail" placeholder="Email" required></div>
         <div class="field"><input type="password" id="loginPassword" placeholder="Password" required></div>
+        
         <div class="auth-links">
           <a href="#" id="forgotPasswordLink">Forgot Password?</a>
-          <a href="signup.html">Sign Up</a>
         </div>
-        <button type="submit" class="btn btn-black w-full">Login</button>
-        <button type="button" id="resendVerifyBtn" class="btn btn-ghost w-full mt-2" style="display:none;">Resend Verification</button>
+
+        <div class="btn-center">
+          <button type="submit" class="btn btn-black w-full">Login</button>
+        </div>
+        <div class="btn-center">
+          <button type="button" id="resendVerifyBtn" class="btn btn-ghost w-full" style="display:none;">Resend Verification</button>
+        </div>
+        <div class="btn-center">
+          <a href="signup.html" class="btn btn-ghost w-full">Don't have an account? Sign Up</a>
+        </div>
       </form>
 
       <div class="divider"><span></span> OR <span></span></div>
