--- a/login.html
+++ b/login.html
@@ -108,7 +108,8 @@
   </main>
 
   <!-- Footer -->
-  <footer>
+  <!-- Footer (same as index page) -->
+  <footer class="bg-gray-900 text-gray-300 py-10">
     <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-8">
       <div>
         <h4 class="text-xl font-bold text-white mb-3">Sitegen Hosting</h4>
@@ -129,8 +130,9 @@
         <p>Phone: +1 (800) 123-4567</p>
       </div>
     </div>
-    <div class="text-center">© 2025 Sitegen Hosting. All rights reserved.</div>
+    <div class="mt-8 text-center text-sm text-gray-500">© 2025 Sitegen Hosting. All rights reserved.</div>
   </footer>
+
 
   <!-- Toasts -->
   <div id="toastContainer"></div>
